[project]
name = "api-service"
version = "0.1.0"
description = "api service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "faststream>=0.5.35",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]